Fix horizontal scrollbar

--- a/packages/dope/assets/less/general/basics.less
+++ b/packages/dope/assets/less/general/basics.less
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   --primary-color: #9692af;
+  --scrollbar: 0px;
 }
 
 *,
